# dm-prog-2

./: .gitignore  CMakeLists.txt  exo1.c  exo2.c  main_exo1.c  main_exo2.c  readme.md
Google_tests/: CMakeLists.txt  Exo1Test.cpp
lib_exo1/: CMakeLists.txt  tablist.c  tablist_lib.c
lib_exo2/: CMakeLists.txt  holelist.c
